tests/NormalTests/paczka1/small_fuzzy/84555919.err
Error in line 2: tYTTV A71 94,4
Error in line 11: tYTTV S665 55,8
Error in line 15: irGuTFg4dTG S394 90,2
